# thtn

./: .gitignore  CMakeLists.txt  README.md  script.sh
data/: 10_blocks_10_requests.json  10_blocks_15_requests.json  10_blocks_20_requests.json  10_blocks_25_requests.json  10_blocks_5_requests.json  12_blocks_5_requests.json  15_blocks_10_requests.json  15_blocks_15_requests.json  15_blocks_20_requests.json  15_blocks_25_requests.json  15_blocks_5_requests.json  20_blocks_10_requests.json  20_blocks_15_requests.json  20_blocks_20_requests.json  20_blocks_25_requests.json  20_blocks_5_requests.json  25_blocks_10_requests.json  25_blocks_15_requests.json  25_blocks_1_requests.json  25_blocks_20_requests.json  25_blocks_25_requests.json  25_blocks_5_requests.json  5_blocks_10_requests.json  5_blocks_15_requests.json  5_blocks_1_requests.json  5_blocks_20_requests.json  5_blocks_25_requests.json  5_blocks_2_requests.json  5_blocks_5_requests.json  7_blocks_5_requests.json  block_bounds.json  generate_datafile.py  joint_bounds.json  locations.json  robots.json
experiments/: setup_blocks_and_requests.py
experiments/locations/: 10_blocks_10_requests.txt  10_blocks_15_requests.txt  10_blocks_20_requests.txt  10_blocks_25_requests.txt  10_blocks_5_requests.txt  15_blocks_10_requests.txt  15_blocks_15_requests.txt  15_blocks_20_requests.txt  15_blocks_25_requests.txt  15_blocks_5_requests.txt  20_blocks_10_requests.txt  20_blocks_15_requests.txt  20_blocks_20_requests.txt  20_blocks_25_requests.txt  20_blocks_5_requests.txt  25_blocks_10_requests.txt  25_blocks_15_requests.txt  25_blocks_20_requests.txt  25_blocks_25_requests.txt  25_blocks_5_requests.txt  5_blocks_10_requests.txt  5_blocks_15_requests.txt  5_blocks_20_requests.txt  5_blocks_25_requests.txt  5_blocks_5_requests.txt
experiments/popf/: 10_blocks_10_requests.pddl  10_blocks_15_requests.pddl  10_blocks_20_requests.pddl  10_blocks_25_requests.pddl  10_blocks_5_requests.pddl  15_blocks_10_requests.pddl  15_blocks_15_requests.pddl  15_blocks_20_requests.pddl  15_blocks_25_requests.pddl  15_blocks_5_requests.pddl  20_blocks_10_requests.pddl  20_blocks_15_requests.pddl  20_blocks_20_requests.pddl  20_blocks_25_requests.pddl  (+13 more)
outputs/: output.pdf_tex  plan.dot  plan.json  plan_a.txt  plan_b.txt  plan_c.txt  plan_d.txt  plan_op_spec_v1.json
parser/: CMakeLists.txt  hddl-token.l  hddl.y
parser/include/: cwa.hpp  domain.hpp  hddlWriter.hpp  output.hpp  parsetree.hpp  properties.hpp
parser/src/: cwa.cpp  domain.cpp  hddlWriter.cpp  main.cpp  output.cpp  parsetree.cpp  properties.cpp
planner/: Plots.ipynb  permute_test.txt  script.sh  script_permute.sh
(+92 files in other folders)
